fix(header): remove small gap between header and content and move header transparancy to addon full-backdrop

--- a/addons/full-backdrop.css
+++ b/addons/full-backdrop.css
@@ -13,3 +13,7 @@
     background: rgba(20, 20, 20, 0.3);
     backdrop-filter: blur(7px);
 }
+
+.skinHeader {
+    background: linear-gradient(to bottom, rgb(5, 5, 5), rgba(20, 20, 20, 0.9)) !important;
+}
