--- a/default.css
+++ b/default.css
@@ -2191,7 +2191,11 @@ h2 {
 /* Top menu transparency */
 
 .skinHeader {
-  background: linear-gradient(to bottom, rgb(5, 5, 5), rgba(20, 20, 20, 0.9)) !important;
+  background: linear-gradient(
+          to bottom,
+          rgb(5, 5, 5),
+          rgb(20, 20, 20)
+  ) !important;
 }
 
 .skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred.semiTransparent {
@@ -2721,4 +2725,7 @@ div:not(.paperList) .listItem {
 
 .listItemMediaInfo {
   margin-right: 1vw;
+}
+.pageWithAbsoluteTabs:not(.noSecondaryNavPage) {
+  padding-top: 4.6em !important;
 }
